[tool.poetry]
name = "demo-model"
version = "0.1.0"
description = "Demo repo for modeling"
authors = ["Ken Cavagnolo"]
license = "MIT"
readme = "README.md"
packages = [{include = "demo_model"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.0.3"
pyarrow = "^13.0.0"
seaborn = "^0.12.2"
pyyaml = "^6.0.1"
imblearn = "^0.0"
joblib = "^1.3.2"
scikit-learn = "^1.3.0"
argparse = "^1.4.0"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
